Revision history for CLI-Version

{{$NEXT}}

0.0.8  2022-09-24T00:23:44+02:00
    - Make loading more resilient against an improper $?DISTRIBUTION
    - Remove typing in MAIN candidate for more flexibility

0.0.7  2022-08-07T23:02:13+02:00
    - Don't complain about lack of distribution information.  Just
      don't add any dispatchees in that case.  Should fix issues
      with processing pod of modules using this module.

0.0.6  2022-08-04T15:27:25+02:00
    - Be more lenient on the name of the sub specified

0.0.5  2022-08-03T16:52:09+02:00
    - Add some better error checking
    - Report arguments as Bools for better default help production

0.0.4  2022-07-22T16:40:51+02:00
    - Add option to only allow --version

0.0.3  2022-06-29T13:25:19+02:00
    - Changed wording of "based on" to "provided by" as that more
      accurately describes what we're talking about

0.0.2  2022-06-28T22:03:39+02:00
    - Added optional --verbose option to also show description

0.0.1  2022-06-26T11:38:54+02:00
    - Initial version