@@ -1,4 +1,4 @@
-[![Actions Status](https://github.com/lizmat/CLI-Version/actions/workflows/test.yml/badge.svg)](https://github.com/lizmat/CLI-Version/actions)
+[![Actions Status](https://github.com/lizmat/CLI-Version/actions/workflows/linux.yml/badge.svg)](https://github.com/lizmat/CLI-Version/actions) [![Actions Status](https://github.com/lizmat/CLI-Version/actions/workflows/macos.yml/badge.svg)](https://github.com/lizmat/CLI-Version/actions) [![Actions Status](https://github.com/lizmat/CLI-Version/actions/workflows/windows.yml/badge.svg)](https://github.com/lizmat/CLI-Version/actions)
 
 NAME
 ====
@@ -27,8 +27,8 @@ CLI::Version adds a `multi sub` candidate to the `&MAIN` function in your script
 For instance, in the [App::Rak](https://raku.land/zef:lizmat/App::Rak) distribution, which provides a `rak` CLI, calling `rak -V` will result in something like:
 
 ```bash
-    $ rak -V
-    rak - provided by App::Rak 0.0.3, running Raku 6.d on Rakudo 2022.06.
+$ rak --version
+rak - provided by App::Rak 0.3.2, running Raku 6.d with Rakudo 2024.07.
 ```
 
 If the candidate is triggered, it will exit with the default value for `exit` (which is usually **0**).
@@ -36,9 +36,9 @@ If the candidate is triggered, it will exit with the default value for `exit` (w
 If you would also like to see the description of the module, you can add `--verbose` as an argument: then you get something like:
 
 ```bash
-    $ rak -V --verbose
-    rak - a CLI for searching strings in files.
-    Provided by App::Rak 0.0.3, running Raku 6.d with Rakudo 2022.06.27.
+$ rak --version --verbose
+rak - 21st century grep / find / ack / ag / rg on steroids.
+Provided by App::Rak 0.3.2, running Raku 6.d with Rakudo 2024.07.
 ```
 
 By specifying a true value as the 3rd argument in the `use` statement, will cause only `--version` to trigger the candidate.
@@ -60,7 +60,7 @@ If you like this module, or what I’m doing more generally, committing to a [sm
 COPYRIGHT AND LICENSE
 =====================
 
-Copyright 2022 Elizabeth Mattijsen
+Copyright 2022, 2024 Elizabeth Mattijsen
 
 This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
 
