@@ -10,4 +10,6 @@ filename = lib/CLI/Version.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test.yml
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
